--- a/requirements.txt
+++ b/requirements.txt
@@ -12,11 +12,11 @@ certifi==2020.12.5
     # via python-telegram-bot
 cffi==1.14.5
     # via cryptography
-configparser==5.0.1
-    # via -r requirements.in
 cryptography==3.4.6
     # via python-telegram-bot
 decorator==4.4.2
+    # via -r requirements.in
+dynaconf==3.1.8
     # via -r requirements.in
 pycparser==2.20
     # via cffi
